<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fahim A.</string>
    <string name="menu_settings">Settings</string>
    <string name="myname">Fahim A.</string>
    <string name="details">Web Developer and Designer</string>
    <string name="website">Astronomy7.com</string>
    <string name="more">More info</string>
    <string name="goWeb">Website</string>
    <string name="avatar">Avatar</string>
    <string name="title_activity_moreinfo">Moreinfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Go back</string>
    <string name="title_activity_webpage">Webpage</string>
    <string name="action_settings">Settings</string>
    <string name="copyAddress">Copy link</string>
    <string name="weburl">http://astronomy7.com</string>
    <string name="myinfomore">I love Websites.</string>
    <string name="myinfomore2">I love Programming.</string>
    <string name="myinfomore3">I am Ready.</string>
    <string name="myinfomore4">Enough details?</string>
     <string name="myemail">n1loy@astronomy7.com</string>
        <string name="getemail">Save this:</string>
     
</resources>